Revert "Bug 1072092 - improving visibility accessibility for statusbar icons when in fullscreen and fullscreen-app mode."
This reverts commit d6f114e039b4d7918dbc3b4cd999adb88f6eeced.

--- a/apps/system/style/statusbar/statusbar.css
+++ b/apps/system/style/statusbar/statusbar.css
@@ -40,12 +40,12 @@
   visibility: hidden;
 }
 
-#screen:not(.cards-view) #statusbar.maximized:not(.fullscreen):not(.fullscreen-layout) #statusbar-maximized-wrapper {
+#screen:not(.cards-view) #statusbar.maximized #statusbar-maximized-wrapper {
   opacity: 1;
   visibility: visible;
 }
 
-#screen:not(.cards-view) #statusbar:not(.maximized):not(.fullscreen):not(.fullscreen-layout) #statusbar-minimized-wrapper {
+#screen:not(.cards-view) #statusbar:not(.maximized) #statusbar-minimized-wrapper {
   opacity: 1;
   visibility: visible;
 }
@@ -65,11 +65,6 @@
 }
 
 #screen:not(.locked).utility-tray #statusbar-maximized-wrapper {
-  opacity: 1;
-  visibility: visible;
-}
-
-#screen:not(.locked).minimized-tray #statusbar-minimized-wrapper {
   opacity: 1;
   visibility: visible;
 }
